[gd_scene load_steps=15 format=3 uid="uid://ceyo23uu67e8h"]

[ext_resource type="Script" path="res://BrainVisualizer/UI/Top_Bar/TopBar.gd" id="1_f5hja"]
[ext_resource type="PackedScene" uid="uid://upps8mctgsdg" path="res://BrainVisualizer/UI/GenericElements/Buttons/IconButtonHorizontal/IconButtonHorizontal.tscn" id="2_4d0u0"]
[ext_resource type="Script" path="res://BrainVisualizer/UI/GenericElements/TextBoxes/FloatInput.gd" id="3_v82xb"]
[ext_resource type="Texture2D" uid="uid://b3go6kjen16je" path="res://BrainVisualizer/UI/GenericResources/ButtonIcons/top_bar_cortical_area.png" id="3_x3r8j"]
[ext_resource type="Texture2D" uid="uid://cgrjmannf3xnp" path="res://BrainVisualizer/UI/GenericResources/ButtonIcons/Plus_S.png" id="4_e2mvc"]
[ext_resource type="Texture2D" uid="uid://b0flkhnupkfjk" path="res://BrainVisualizer/UI/GenericResources/ButtonIcons/top_bar_connectivity_rules.png" id="4_xxo28"]
[ext_resource type="Texture2D" uid="uid://dryfi4tlhq5mq" path="res://BrainVisualizer/UI/GenericResources/ButtonIcons/Plus_C.png" id="5_etpv8"]
[ext_resource type="Texture2D" uid="uid://ddg6hll5cu8vb" path="res://BrainVisualizer/UI/GenericResources/ButtonIcons/Plus_H.png" id="6_fkuh3"]
[ext_resource type="Script" path="res://BrainVisualizer/UI/GenericElements/TextBoxes/TextInput.gd" id="7_g1qxj"]
[ext_resource type="Texture2D" uid="uid://ejh64qo18s05" path="res://BrainVisualizer/UI/GenericResources/ButtonIcons/Plus_D.png" id="7_puuh8"]
[ext_resource type="Script" path="res://BrainVisualizer/UI/GenericElements/TextBoxes/IntInput.gd" id="9_jcvuj"]
[ext_resource type="PackedScene" uid="uid://byvcu1dqoe5uo" path="res://BrainVisualizer/UI/Top_Bar/StateIndicator/StateInidicator.tscn" id="10_3567y"]
[ext_resource type="PackedScene" uid="uid://0pa5al454wse" path="res://BrainVisualizer/UI/Top_Bar/SplitViewDropDown/SplitViewDropDown.tscn" id="20_ugrg0"]
[ext_resource type="PackedScene" uid="uid://bmc8qgeccqy5m" path="res://BrainVisualizer/UI/GenericElements/MultiItemCollapsible/MultiItemCollapsible.tscn" id="21_b22q2"]

[node name="TopBar" type="HBoxContainer"]
offset_left = 10.0
offset_top = 10.0
offset_right = 862.0
offset_bottom = 66.0
theme_override_constants/separation = 5
script = ExtResource("1_f5hja")

[node name="Buttons" type="PanelContainer" parent="."]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="Buttons"]
layout_mode = 2
theme_override_constants/margin_left = 4
theme_override_constants/margin_top = 0
theme_override_constants/margin_right = 4
theme_override_constants/margin_bottom = 0

[node name="HBoxContainer" type="HBoxContainer" parent="Buttons/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 14

[node name="HBoxContainer" type="HBoxContainer" parent="Buttons/MarginContainer/HBoxContainer"]
layout_mode = 2

[node name="BrainAreas" parent="Buttons/MarginContainer/HBoxContainer/HBoxContainer" instance=ExtResource("2_4d0u0")]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
tooltip_text = "View Brain Areas"
top_right_bottom_left_paddings = Vector4i(4, 4, 4, 4)
texture = ExtResource("3_x3r8j")
texture_size = Vector2i(48, 48)
button_text = &"Cortical Areas"
gap_between_text_and_texture = 5

[node name="TextureButton" type="TextureButton" parent="Buttons/MarginContainer/HBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(52, 52)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
tooltip_text = "Add Brain Area..."
texture_normal = ExtResource("4_e2mvc")
texture_pressed = ExtResource("5_etpv8")
texture_hover = ExtResource("6_fkuh3")
texture_disabled = ExtResource("7_puuh8")
ignore_texture_size = true
stretch_mode = 0

[node name="HBoxContainer2" type="HBoxContainer" parent="Buttons/MarginContainer/HBoxContainer"]
layout_mode = 2

[node name="ConnectivityRules" parent="Buttons/MarginContainer/HBoxContainer/HBoxContainer2" instance=ExtResource("2_4d0u0")]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
tooltip_text = "View Connectivity Rules"
top_right_bottom_left_paddings = Vector4i(4, 4, 4, 4)
texture = ExtResource("4_xxo28")
texture_size = Vector2i(50, 48)
button_text = &"Connectivity Rules"
gap_between_text_and_texture = 5

[node name="TextureButton" type="TextureButton" parent="Buttons/MarginContainer/HBoxContainer/HBoxContainer2"]
custom_minimum_size = Vector2(52, 52)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
tooltip_text = "Add Connectivity Rule..."
texture_normal = ExtResource("4_e2mvc")
texture_pressed = ExtResource("6_fkuh3")
texture_hover = ExtResource("6_fkuh3")
texture_disabled = ExtResource("7_puuh8")
ignore_texture_size = true
stretch_mode = 0

[node name="ChangeSize" type="PanelContainer" parent="."]
visible = false
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="ChangeSize"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="HBoxContainer" type="HBoxContainer" parent="ChangeSize/MarginContainer"]
layout_mode = 2

[node name="Smaller" type="TextureButton" parent="ChangeSize/MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(52, 52)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
tooltip_text = "Decrease UI Size"
ignore_texture_size = true
stretch_mode = 0

[node name="Bigger" type="TextureButton" parent="ChangeSize/MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(52, 52)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
tooltip_text = "Increase UI Size"
ignore_texture_size = true
stretch_mode = 0

[node name="DropDownPanel" type="PanelContainer" parent="."]
visible = false
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="DropDownPanel"]
layout_mode = 2
theme_override_constants/margin_left = 4
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 4
theme_override_constants/margin_bottom = 4

[node name="SplitViewDropDown" parent="DropDownPanel/MarginContainer" instance=ExtResource("20_ugrg0")]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="DetailsPanel" type="PanelContainer" parent="."]
visible = false
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="DetailsPanel"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="Details" parent="DetailsPanel/MarginContainer" node_paths=PackedStringArray("child_nodes_to_run_toggle_collapse_on") instance=ExtResource("21_b22q2")]
layout_mode = 2
size_flags_horizontal = 1
size_flags_vertical = 1
child_nodes_to_run_toggle_collapse_on = [NodePath("Place_child_nodes_here/StateIndicator")]

[node name="RR_Label" type="Label" parent="DetailsPanel/MarginContainer/Details/Place_child_nodes_here" index="0"]
layout_mode = 2
text = "Refresh Rate"
vertical_alignment = 1

[node name="RR_Float" type="LineEdit" parent="DetailsPanel/MarginContainer/Details/Place_child_nodes_here" index="1"]
layout_mode = 2
tooltip_text = "The frequency FEAGI runs at"
alignment = 1
script = ExtResource("3_v82xb")
suffix = " Hz"
min_value = 0.1

[node name="Ping_label" type="Label" parent="DetailsPanel/MarginContainer/Details/Place_child_nodes_here" index="2"]
layout_mode = 2
text = "Latency"
vertical_alignment = 1

[node name="ping" type="LineEdit" parent="DetailsPanel/MarginContainer/Details/Place_child_nodes_here" index="3"]
layout_mode = 2
tooltip_text = "Latency between FEAGI and you"
alignment = 1
editable = false
script = ExtResource("9_jcvuj")
suffix = "ms"

[node name="neuron_label" type="Label" parent="DetailsPanel/MarginContainer/Details/Place_child_nodes_here" index="4"]
layout_mode = 2
text = "Neurons"
vertical_alignment = 1

[node name="neuron" type="LineEdit" parent="DetailsPanel/MarginContainer/Details/Place_child_nodes_here" index="5"]
layout_mode = 2
tooltip_text = "The number of currently loaded neurons vs the total allowed"
alignment = 1
editable = false
script = ExtResource("7_g1qxj")

[node name="synapse_label" type="Label" parent="DetailsPanel/MarginContainer/Details/Place_child_nodes_here" index="6"]
layout_mode = 2
text = "Synapses"
vertical_alignment = 1

[node name="synapse" type="LineEdit" parent="DetailsPanel/MarginContainer/Details/Place_child_nodes_here" index="7"]
layout_mode = 2
tooltip_text = "The number of currently loaded synapses vs the total allowed"
alignment = 1
editable = false
script = ExtResource("7_g1qxj")

[node name="state_label" type="Label" parent="DetailsPanel/MarginContainer/Details/Place_child_nodes_here" index="8"]
layout_mode = 2
tooltip_text = "The overall health of FEAGI"
text = "System Health"
vertical_alignment = 1

[node name="StateIndicator" parent="DetailsPanel/MarginContainer/Details/Place_child_nodes_here" index="9" instance=ExtResource("10_3567y")]
layout_mode = 2

[connection signal="pressed" from="Buttons/MarginContainer/HBoxContainer/HBoxContainer/BrainAreas" to="." method="_open_cortical_areas"]
[connection signal="pressed" from="Buttons/MarginContainer/HBoxContainer/HBoxContainer/TextureButton" to="." method="_open_create_cortical"]
[connection signal="pressed" from="Buttons/MarginContainer/HBoxContainer/HBoxContainer2/ConnectivityRules" to="." method="_open_neuron_morphologies"]
[connection signal="pressed" from="Buttons/MarginContainer/HBoxContainer/HBoxContainer2/TextureButton" to="." method="_open_create_morpology"]
[connection signal="pressed" from="ChangeSize/MarginContainer/HBoxContainer/Smaller" to="." method="_smaller_scale"]
[connection signal="pressed" from="ChangeSize/MarginContainer/HBoxContainer/Bigger" to="." method="_bigger_scale"]

[editable path="DetailsPanel/MarginContainer/Details"]
